tests/error/func_ret_array_empty.gw
// [contains] must be defined with empty
 function int[1] my_func(int i[]){}
